--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"gen": "npx plop"
 	},
 	"dependencies": {
+		"@types/styled-components": "^4.4.1",
 		"file-loader": "^5.0.2",
 		"gh-pages": "^2.1.1",
 		"html-webpack-plugin": "^3.2.0",
