--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
 		"file-loader": "^5.0.2",
 		"gh-pages": "^2.1.1",
 		"html-webpack-plugin": "^3.2.0",
+		"i18next": "^19.0.1",
 		"office-ui-fabric-react": "^7.69.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"react-i18next": "^11.2.5",
 		"styled-components": "^4.4.1"
 	},
 	"devDependencies": {
