--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
 		"office-ui-fabric-react": "^7.69.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"react-helmet": "^5.2.1",
 		"react-i18next": "^11.2.5",
 		"styled-components": "^4.4.1"
 	},
 	"devDependencies": {
+		"@types/react-helmet": "^5.0.14",
 		"babel-plugin-styled-components": "^1.10.6",
 		"css-loader": "^3.2.1",
 		"just-scripts": "^0.36.1",
