--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "delicut-web-single",
+	"private": true,
 	"version": "0.1.0",
 	"license": "MIT",
 	"main": "lib-commonjs/index.js",
@@ -15,6 +16,7 @@
 		"gen": "npx plop"
 	},
 	"dependencies": {
+		"@svgr/webpack": "^5.0.0",
 		"@types/styled-components": "^4.4.1",
 		"file-loader": "^5.0.2",
 		"gh-pages": "^2.1.1",
@@ -25,9 +27,12 @@
 		"react-dom": "^16.12.0",
 		"react-helmet": "^5.2.1",
 		"react-i18next": "^11.2.5",
-		"styled-components": "^4.4.1"
+		"styled-components": "^4.4.1",
+		"url-loader": "^3.0.0"
 	},
 	"devDependencies": {
+		"@types/react": "^16.9.16",
+		"@types/react-dom": "^16.9.4",
 		"@types/react-helmet": "^5.0.14",
 		"babel-plugin-styled-components": "^1.10.6",
 		"css-loader": "^3.2.1",
@@ -36,6 +41,7 @@
 		"node-sass": "^4.13.0",
 		"postcss-loader": "^3.0.0",
 		"sass-loader": "^8.0.0",
+		"typescript": "^3.7.3",
 		"typescript-plugin-styled-components": "^1.4.3",
 		"webpack": "^4.41.2",
 		"webpack-cli": "^3.3.10",
