--- a/package.json
+++ b/package.json
@@ -16,35 +16,35 @@
 		"gen": "npx plop"
 	},
 	"dependencies": {
-		"@svgr/webpack": "^5.0.0",
-		"@types/styled-components": "^4.4.1",
-		"file-loader": "^5.0.2",
-		"gh-pages": "^2.1.1",
-		"html-webpack-plugin": "^3.2.0",
-		"i18next": "^19.0.1",
-		"office-ui-fabric-react": "^7.69.1",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
+		"@fluentui/react": "^7.105.13",
+		"@svgr/webpack": "^5.3.1",
+		"@types/styled-components": "^5.0.1",
+		"file-loader": "^6.0.0",
+		"gh-pages": "^2.2.0",
+		"html-webpack-plugin": "^4.0.4",
+		"i18next": "^19.3.4",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
 		"react-helmet": "^5.2.1",
-		"react-i18next": "^11.2.5",
-		"styled-components": "^4.4.1",
-		"url-loader": "^3.0.0"
+		"react-i18next": "^11.3.4",
+		"styled-components": "^5.1.0",
+		"url-loader": "^4.0.0"
 	},
 	"devDependencies": {
-		"@types/react": "^16.9.16",
-		"@types/react-dom": "^16.9.4",
-		"@types/react-helmet": "^5.0.14",
-		"babel-plugin-styled-components": "^1.10.6",
-		"css-loader": "^3.2.1",
-		"just-scripts": "^0.36.1",
+		"@types/react": "^16.9.32",
+		"@types/react-dom": "^16.9.6",
+		"@types/react-helmet": "^5.0.15",
+		"babel-plugin-styled-components": "^1.10.7",
+		"css-loader": "^3.5.1",
+		"just-scripts": "^0.37.1",
 		"just-stack-react": "^1.0.4",
-		"node-sass": "^4.13.0",
+		"node-sass": "^4.13.1",
 		"postcss-loader": "^3.0.0",
-		"sass-loader": "^8.0.0",
-		"typescript": "^3.7.3",
-		"typescript-plugin-styled-components": "^1.4.3",
-		"webpack": "^4.41.2",
-		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.9.0"
+		"sass-loader": "^8.0.2",
+		"typescript": "^3.8.3",
+		"typescript-plugin-styled-components": "^1.4.4",
+		"webpack": "^4.42.1",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.10.3"
 	}
 }
