just a helpful comment to same me 30 minutes in the future. maybe.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,8 @@
 	"sourceMap": true
   },
 
-  "include": ["src", "typings/*.d.ts"]
+"include": [
+	"src",
+	"typings/*.d.ts" //leave it to make svg module.scss modules imports work 
+]
 }
