* implementing isPro an isev flags applying them to turn off GA and controlling styles injection and vendor specific css tags. Webpack's DefinePlugin is used to do that. Also note that microsoft/just is BS so you could not rely on passed with run scripts variables because reasons. Bug created.
* adding webpack plugin to clean dist directory.

* Configuring webpack.devServer to serve the website to current IP so that website could be accesable from local network, while keeping change reload work.

* spelling mista corrected in one of the language res key.
* GA is disabled in non-production environment.
* changing the way how styles are ingejcted and if vendor specific tags are added depending on environment.
* replaced logo
* reshaping homepage a bit and moving code around

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
 	"main": "lib-commonjs/index.js",
 	"module": "lib/index.js",
 	"scripts": {
-		"build": "just-scripts build",
+		"build": "just-scripts build --mode production",
+		"build-dev": "just-scripts build --mode development",
 		"just": "just-scripts",
 		"start": "just-scripts start",
 		"test": "just-scripts test",
 		"change": "npx beachball change",
-		"predeploy": "just-scripts build  && cp public/CNAME dist/CNAME",
+		"predeploy": "just-scripts build && cp public/CNAME dist/CNAME",
 		"deploy": "gh-pages -d dist",
 		"gen": "npx plop"
 	},
@@ -39,6 +40,7 @@
 		"@typescript-eslint/eslint-plugin": "^2.27.0",
 		"@typescript-eslint/parser": "^2.27.0",
 		"babel-plugin-styled-components": "^1.10.7",
+		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^3.5.1",
 		"eslint": "^6.8.0",
 		"just-scripts": "^0.37.1",
