--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,10 @@
 			"name": "Launch Webpack (for webpack.config debugging)",
 			"program": "${workspaceFolder}/node_modules/webpack/bin/webpack.js",
 			"args": [
-				"--config", "./webpack.serve.config.js"
-				,"--mode", "development"
+				"--config",
+				"./webpack.serve.config.js",
+				"--mode",
+				"development"
 			],
 		},
 		{
@@ -30,11 +32,22 @@
 		{
 			"type": "node",
 			"request": "launch",
-			"name": "Launch Just (for just debugging)",
+			"name": "just start (for just debugging)",
 			"program": "${workspaceFolder}/node_modules/just-scripts/bin/just-scripts.js",
 			"args": [
-				"start"
-			],
+				"start",
+				"--mode",
+				"production"
+			]
+		},
+		{
+			"type": "node",
+			"request": "launch",
+			"name": "just build (for just debugging)",
+			"program": "${workspaceFolder}/node_modules/just-scripts/bin/just-scripts.js",
+			"args": [
+				"build"
+			]
 		},
 		{
 			"name": "Debug in Chrome",
@@ -43,10 +56,10 @@
 			"url": "http://localhost:8080",
 			"webRoot": "${workspaceRoot}/src",
 			"smartStep": true, //start step docs: https://code.visualstudio.com/docs/nodejs/nodejs-debugging#_smart-stepping
-			 "skipFiles": [
-			 	"<node_internals>/**/*.js",
-			 	"${workspaceFolder}/**/*.js"
-			 ]
+			"skipFiles": [
+				"<node_internals>/**/*.js",
+				"${workspaceFolder}/**/*.js"
+			]
 		}
 	]
 }
